# human-scene-transformer

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest_and_autopublish.yml
human_scene_transformer/: __init__.py  is_hidden_generators.py  losses.py  train.py  train_model.py  training_params.py
human_scene_transformer/config/jrdb/: dataset_params.gin  metrics.gin  model_params.gin  training_params.gin
human_scene_transformer/config/jrdb_challenge/: dataset_params.gin  metrics.gin  model_params.gin  training_params.gin
human_scene_transformer/config/pedestrians/: dataset_params.gin  metrics.gin  model_params.gin  training_params.gin
human_scene_transformer/data/: README.md  box_utils.py  extract_robot_odometry_from_rosbag.py  jrdb_preprocess_test.py  jrdb_preprocess_train.py  jrdb_train_detections_to_tracks.py  utils.py
human_scene_transformer/data/math/: data_types.py  math_types.py  pose3.py  quaternion.py  rotation3.py  vector_util.py
human_scene_transformer/jrdb/: dataset_params.py  eval.py  eval_challenge.py  eval_keypoints.py  input_fn.py  torch_dataset.py
human_scene_transformer/metrics/: ade.py  mean_angle_error.py  metrics.py  pos_nll.py
human_scene_transformer/model/: README.md  agent_encoder.py  agent_feature_encoder.py  agent_self_alignment.py  attention.py  embedding.py  head.py  model.py  model_params.py  multimodality_induction.py  output_distributions.py  preprocess.py  scene_encoder.py
human_scene_transformer/pedestrians/: dataset_params.py  eval.py  input_fn.py
